--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ on:
     branches:
       - main
   workflow_dispatch:
+  schedule:
+    - cron: '0 2 * * 0'
 
 jobs:
   train:
@@ -19,12 +21,37 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements/requirements.txt
     - name: Train and save pipeline
-      run: python titanic_model/train_pipeline.py
+      run: python bankloan_model/train_pipeline.py
     - uses: actions/upload-artifact@v4
       with:
         name: my-trained-pipeline
-        path: titanic_model/trained_models/*.pkl
+        path: bankloan_model/trained_models/*.pkl
         retention-days: 1
+  
+
+  tune:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: pip install -r requirements/requirements.txt
+
+      - name: Run Hyperparameter Tuning
+        run: python bankloan_model/tune_hyperparameters.py
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: best-params
+          path: bankloan_model/best_trial.json
+          retention-days: 2
 
   test:
     needs: train
@@ -40,7 +67,7 @@ jobs:
     - uses: actions/download-artifact@v4
       with:
         name: my-trained-pipeline
-        path: titanic_model/trained_models
+        path: bankloan_model/trained_models
     - name: Install dependencies
       run: pip install -r requirements/test_requirements.txt
     - name: Test with pytest
@@ -60,7 +87,7 @@ jobs:
     - uses: actions/download-artifact@v4
       with:
         name: my-trained-pipeline
-        path: titanic_model/trained_models
+        path: bankloan_model/trained_models
     - name: Install dependencies
       run: pip install --upgrade build
     - name: Build package
@@ -81,24 +108,24 @@ jobs:
     - uses: actions/download-artifact@v4
       with:
         name: my-build-package
-        path: titanic_model_api
+        path: bankloan_model_api
 
-    - name: Login to Docker hub
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+  
+    - name: Log in to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+  
+    - name: Build, Tag, and Push Docker image
       env:
-        DOCKER_USER: ${{ secrets.DOCKER_USER_NAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASS_TOKEN }}
-      run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
-
-    - name: Build the Docker image for Fastapi app
-      env:
-        DOCKER_USER: ${{ secrets.DOCKER_USER_NAME }}
-      run: docker build . -f Dockerfile -t $DOCKER_USER/titanic-fastapi:latest
-
-    - name: Push the Docker Image
-      env:
-        DOCKER_USER: ${{ secrets.DOCKER_USER_NAME }}
-      run: docker push $DOCKER_USER/titanic-fastapi
-
-    - name: Logout to Docker hub
-      run: docker logout
-
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPO: ${{ secrets.ECR_REPO }}
+      run: |
+        IMAGE_TAG=latest
+        docker build -t $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
