--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,13 +1,13 @@
 include *.txt
 include *.md
 include *.pkl
-recursive-include ./titanic_model *
+recursive-include ./bankloan_model *
 
-include titanic_model/datasets/titanic.csv
-include titanic_model/datasets/test.csv
-include titanic_model/trained_models/*.pkl
-include titanic_model/VERSION
-include titanic_model/config.yml
+include bankloan_model/datasets/bankloan.csv
+include bankloan_model/datasets/test.csv
+include bankloan_model/trained_models/*.pkl
+include bankloan_model/VERSION
+include bankloan_model/config.yml
 
 include ./requirements/requirements.txt
 include ./requirements/test_requirements.txt
