--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
   
 
   tune:
+    needs: train
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -54,7 +55,7 @@ jobs:
           retention-days: 2
 
   test:
-    needs: train
+    needs: tune
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
