--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,8 @@ on:
     branches:
       - main
   workflow_dispatch:
-  schedule:
-    - cron: '0 2 * * 0'
+#  schedule:
+#    - cron: '0 2 * * 0'
 
 jobs:
   train:
@@ -41,9 +41,6 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: '3.10'
-
-      - name: Install dependencies
-        run: pip install -r requirements/requirements.txt
 
       - name: Run Hyperparameter Tuning
         run: python bankloan_model/tune_hyperparameters.py
