--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,7 +105,7 @@ jobs:
         python-version: '3.10'
     - uses: actions/download-artifact@v4
       with:
-        name: my-trained-pipeline
+        name: optimized-model
         path: bankloan_model/trained_models
     - name: Install dependencies
       run: pip install -r requirements/test_requirements.txt
@@ -125,7 +125,7 @@ jobs:
         python-version: '3.10'
     - uses: actions/download-artifact@v4
       with:
-        name: my-trained-pipeline
+        name: optimized-model
         path: bankloan_model/trained_models
     - name: Install dependencies
       run: pip install --upgrade build
