--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,14 +140,22 @@ jobs:
   push-image:
     needs: [retrain, test, build]
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
     - name: Repo Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3  # Update to v3 for consistency
 
     - uses: actions/download-artifact@v4
       with:
         name: my-build-package
         path: bankloan_model_api
+        
+    - uses: actions/download-artifact@v4
+      with:
+        name: optimized-model
+        path: bankloan_model/trained_models
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
@@ -164,7 +172,9 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPO: ${{ secrets.ECR_REPO }}
+        IMAGE_TAG: ${{ github.sha }}  # Using commit SHA for versioning
       run: |
-        IMAGE_TAG=latest
-        docker build -t $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
+        
+    - name: Log out from Amazon ECR
+      if: always()
+      run: docker logout ${{ steps.login-ecr.outputs.registry }}
