--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,27 +1,51 @@
 name: CD Pipeline
 
-# Only trigger, when the build workflow succeeded i.e. CI Pipeline
+# Only trigger when the CI Pipeline completes successfully
 on:
   workflow_run:
     workflows: ["CI Pipeline"]
     types:
       - completed
+    branches:
+      - main
 
 jobs:
   deploy:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
-      - name: Pull Docker Image
-        env: 
-          DOCKER_USER: ${{ secrets.DOCKER_USER_NAME }}
-        run: sudo docker pull $DOCKER_USER/bankloan-fastapi:latest
-    
-      - name: Delete Old Docker Container
-        run: sudo docker rm -f bankloan-fastapi-container || true
-    
-      - name: Run Docker Container
-        env: 
-          DOCKER_USER: ${{ secrets.DOCKER_USER_NAME }}
-        run: sudo docker run -it -d -p 8001:8001 --name bankloan-fastapi-container $DOCKER_USER/bankloan-fastapi:latest
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Update ECS Task Definition
+        id: task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: task-definition.json
+          container-name: bankloan-model-api
+          image: ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPO }}:latest
+
+      - name: Deploy to Amazon ECS
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.task-def.outputs.task-definition }}
+          service: bankloan-model-service
+          cluster: bankloan-model-cluster
+          wait-for-service-stability: true
+
+      - name: Update Lambda Function
+        run: |
+          aws lambda update-function-code \
+            --function-name bankloan-model-lambda \
+            --image-uri ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPO }}:latest
