--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,6 +174,18 @@ jobs:
         ECR_REPO: ${{ secrets.ECR_REPO }}
         IMAGE_TAG: ${{ github.sha }}  # Using commit SHA for versioning
       run: |
+        # Build the docker image
+        docker build -t $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG .
+        docker tag $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPO:latest
+        
+        # Push both tagged versions
+        echo "Pushing image to ECR..."
+        docker push $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
+        docker push $ECR_REGISTRY/$ECR_REPO:latest
+        
+        # Debug information
+        echo "Image URI: $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG"
+        echo "Latest URI: $ECR_REGISTRY/$ECR_REPO:latest"
         
     - name: Log out from Amazon ECR
       if: always()
