--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,14 +28,14 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Update ECS Task Definition
+      - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: task-definition.json
+          task-definition: bankloan-task-definition.json
           container-name: bankloan-model-api
           image: ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPO }}:latest
-
+      
       - name: Deploy to Amazon ECS
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
