--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,12 +37,22 @@ jobs:
     strategy:
       fail-fast: false        
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Configure AWS credentials  # Need AWS credentials in this job too
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      
       # First register the task definition
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: ./bankloan-task-definition.json
+          task-definition: bankloan-task-definition.json
           container-name: bankloan-model-api
           image: public.ecr.aws/k8f5x7g7/aniketrastogi1987/aiml-mp-xgboost:latest
       
