--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,13 +1,13 @@
 include *.txt
 include *.md
 include *.pkl
-recursive-include ./bankloan_model *
+recursive-include ./patient_model *
 
-include bankloan_model/datasets/bankloan.csv
-include bankloan_model/datasets/test.csv
-include bankloan_model/trained_models/*.pkl
-include bankloan_model/VERSION
-include bankloan_model/config.yml
+include patient_model/datasets/patient_dataset.csv
+include patient_model/datasets/test.csv
+include patient_model/trained_models/*.pkl
+include patient_model/VERSION
+include patient_model/config.yml
 
 include ./requirements/requirements.txt
 include ./requirements/test_requirements.txt
