--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,7 @@ on:
     branches:
       - main
   workflow_dispatch:
-  schedule:
-    - cron: '0 10 * * 5'
-
+  
 jobs:
   train:
     runs-on: ubuntu-latest
@@ -21,79 +19,15 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements/requirements.txt
     - name: Train and save pipeline
-      run: python bankloan_model/train_pipeline.py
+      run: python patient_model/train_pipeline.py
     - uses: actions/upload-artifact@v4
       with:
         name: my-trained-pipeline
-        path: bankloan_model/trained_models/*.pkl
+        path: patient_model/trained_models/*.pkl
         retention-days: 1
   
-  
-  
-  tune:
-    needs: train
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements/requirements.txt
-          pip install -e .
-          pip install optuna
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: my-trained-pipeline
-          path: bankloan_model/trained_models
-
-      - name: Run Hyperparameter Tuning
-        run: python bankloan_model/tune_hyperparameters.py
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: best-params
-          path: bankloan_model/best_trial.json
-          retention-days: 2
-
-  retrain:
-    needs: tune
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.10'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements/requirements.txt
-          pip install -e .
-      - uses: actions/download-artifact@v4
-        with:
-          name: best-params
-          path: bankloan_model/
-      - name: Retrain with optimized parameters
-        run: python bankloan_model/train_pipeline.py --best_params best_trial.json
-      - uses: actions/upload-artifact@v4
-        with:
-          name: optimized-model
-          path: bankloan_model/trained_models/*.pkl
-          retention-days: 2
-
   test:
-    needs: retrain
+    needs: train
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -106,14 +40,14 @@ jobs:
     - uses: actions/download-artifact@v4
       with:
         name: optimized-model
-        path: bankloan_model/trained_models
+        path: patient_model/trained_models
     - name: Install dependencies
       run: pip install -r requirements/test_requirements.txt
     - name: Test with pytest
       run: pytest
 
   build:
-    needs: [retrain, test]
+    needs: [train, test]
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -126,7 +60,7 @@ jobs:
     - uses: actions/download-artifact@v4
       with:
         name: optimized-model
-        path: bankloan_model/trained_models
+        path: patient_model/trained_models
     - name: Install dependencies
       run: pip install --upgrade build
     - name: Build package
@@ -137,8 +71,39 @@ jobs:
         path: dist/*.whl
         retention-days: 1
 
-  push-image:
-    needs: [train, tune, test, build]
+  push-image-docker:
+    needs: [train, test, build]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Repo Checkout
+      uses: actions/checkout@v2
+
+    - uses: actions/download-artifact@v4
+      with:
+        name: my-build-package
+        path: patient_model_api
+
+    - name: Login to Docker hub
+      env:
+        DOCKER_USER: ${{ secrets.DOCKER_USER_NAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASS_TOKEN }}
+      run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
+
+    - name: Build the Docker image for Fastapi app
+      env:
+        DOCKER_USER: ${{ secrets.DOCKER_USER_NAME }}
+      run: docker build . -f Dockerfile -t $DOCKER_USER/titanic-fastapi:latest
+
+    - name: Push the Docker Image
+      env:
+        DOCKER_USER: ${{ secrets.DOCKER_USER_NAME }}
+      run: docker push $DOCKER_USER/titanic-fastapi
+
+    - name: Logout to Docker hub
+      run: docker logout
+
+  push-image-ecr:
+    needs: [train, test, build]
     runs-on: ubuntu-latest
     permissions:
       id-token: write
