--- a/.github/workflows/task_def.yml
+++ b/.github/workflows/task_def.yml
@@ -44,6 +44,8 @@ jobs:
   task-def:
     needs: authenticate
     runs-on: ubuntu-latest
+    outputs:
+      task_def_arn: ${{ steps.register-task-def.outputs.task_def_arn }}
     strategy:
       fail-fast: false        
     steps:
@@ -75,11 +77,31 @@ jobs:
             --output text)
           echo "task_def_arn=${TASK_DEF_ARN}" >> $GITHUB_OUTPUT
    
-      - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      #- name: Deploy Amazon ECS task definition
+      #  uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      #  with:
+      #    task-definition: ${{ steps.task-def.outputs.task-definition }}
+      #    service: ${{ env.ECS_SERVICE }}
+      #    cluster: ${{ env.ECS_CLUSTER }}
+      #    task-definition: ${{ steps.register-task-def.outputs.task_def_arn }} \
+      #    wait-for-service-stability: true
+      
+  deploy-ecs:
+    needs: task-def
+    runs-on: ubuntu-latest
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: ${{ env.ECS_SERVICE }}
-          cluster: ${{ env.ECS_CLUSTER }}
-          wait-for-service-stability: true
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
     
+      - name: Update ECS Service
+        run: |
+          echo "Updating ECS service with new task definition..."
+          aws ecs update-service \
+            --cluster ${{ env.ECS_CLUSTER }} \
+            --service ${{ env.ECS_SERVICE }} \
+            --task-definition ${{ needs.task-def.outputs.task_def_arn }} \
+            --force-new-deployment
