--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,6 +4,15 @@ on:
     branches:
       - main
   workflow_dispatch:
+
+    
+env:
+  ECS_SERVICE: patient-model-service-njm824u0                 # set this to your Amazon ECS service name
+  ECS_CLUSTER: xgboost-ecr                 # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: patient-task-definition.json # set this to the path to your Amazon ECS task definition
+                                               # file, e.g. .aws/task-definition.json
+  CONTAINER_NAME: patient-model-api           # set this to the name of the container in the
+                                               # containerDefinitions section of your task definition
   
 jobs:
   train:
@@ -137,6 +146,7 @@ jobs:
         registry-type: public
         
     - name: Build, Tag, and Push Docker image
+      id: build-ecr-image
       env:
         REGISTRY: public.ecr.aws/k8f5x7g7
         REPOSITORY: aniketrastogi1987/aiml-mp-xgboost
@@ -155,3 +165,19 @@ jobs:
         
         # Output the image URI for use in CD pipeline
         echo "IMAGE_URI=$REGISTRY/$REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
+  
+    - name: Task Definition
+      id: task-def
+      uses: aws-actions/amazon-ecs-render-task-definition@v1
+      with:
+        task-definition: ${{ env.ECS_TASK_DEFINITION }}
+        container-name: ${{ env.CONTAINER_NAME }}
+        image: ${{ steps.build-ecr-image.outputs.image }}
+    
+        
+    - name: Deploy Amazon ECS task definition
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      with:
+        task-definition: ${{ steps.task-def.outputs.task-definition }}
+        service: ${{ env.ECS_SERVICE }}
+        cluster: ${{ env.ECS_CLUSTER }}
